--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Daniel: Fullstack Developer</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="w-full h-full flex justify-center items-center"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
