--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daniel: Fullstack Developer</title>
-  </head>
-  <body>
-    <div id="root" class="w-screen h-screen flex justify-center items-center"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Daniel's portfolio features his best projects: Lumina (an AI chatbot built with Gemini API), Zephyr (a feature-rich chat application), and Summify (a project summarization tool). Explore his innovative work and discover his proficiency in full-stack web development and AI integration.">
+  <meta name="keywords" content="daniel, portfolio, full-stack developer, web developer, programmer, lumina ai, zephyr chat, summify, ai chatbot, gemini api, chat application, project summarization, mern stack, next.js, javascript, react, node.js, mongodb, express.js">
+  <meta property="og:title" content="Daniel's Web Development Portfolio" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://u22099.github.io/Portfolio" />
+  <meta property="og:image" content="https://[url-to-your-portfolio-image.jpg]" />
+  <meta property="og:description" content="View Daniel's portfolio showcasing his skills in full-stack development, including Lumina AI, Zephyr Chat, and Summify.  See his projects and contact information.">
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="image/jpeg" href="/image.jpeg"/>
+  <title>Daniel: Fullstack Developer</title>
+</head>
+
+<body>
+  <div aria-label="Body" id="root" class="w-screen h-screen flex justify-center items-center"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
