--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Daniel's Web Development Portfolio" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://u22099.github.io/Portfolio" />
-  <meta property="og:image" content="https://[url-to-your-portfolio-image.jpg]" />
+  <meta property="og:image" content="/image.jpeg" />
   <meta property="og:description" content="View Daniel's portfolio showcasing his skills in full-stack development, including Lumina AI, Zephyr Chat, and Summify.  See his projects and contact information.">
   <meta name="google-site-verification" content="gL3fhuFRRBOiOZq6DrXUFm47rG-u7vRQ7PojkuVviW8" />
   <link rel="icon" href="/favicon.ico" sizes="any">
